@@ -70,12 +70,6 @@ t3lib_extMgm::addPlugin(array('LLL:EXT:ratings/locallang_db.xml:tt_content.list_
 
 if (TYPO3_MODE=='BE') {
 	$TBE_MODULES_EXT['xMOD_db_new_content_el']['addElClasses']['tx_ratings_pi1_wizicon'] = t3lib_extMgm::extPath($_EXTKEY).'pi1/class.tx_ratings_pi1_wizicon.php';
-//	t3lib_extMgm::insertModuleFunction(
-//		'web_info',
-//		'tx_ratings_modfunc1',
-//		t3lib_extMgm::extPath($_EXTKEY).'modfunc1/class.tx_ratings_modfunc1.php',
-//		'LLL:EXT:ratings/locallang_db.xml:moduleFunction.tx_ratings_modfunc1'
-//	);
 }
 
 t3lib_extMgm::addStaticFile($_EXTKEY,'static/Ratings/', 'Ratings');
