@@ -1,13 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
-<T3locallang>
-	<meta type="array">
-		<type>module</type>
-		<description>Language labels for module &quot;&quot;</description>
-	</meta>
-	<data type="array">
-		<languageKey index="default" type="array">
-			<label index="title">Ratings</label>
-			<label index="checklabel">Check box #1</label>
-		</languageKey>
-	</data>
-</T3locallang>
